--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9305,7 +9305,7 @@ fieldset:disabled .btn {
 
 .bg-dark {
   --bs-bg-opacity: 1;
-  background-color: #20677c !important;
+  background-color: #1c8b98 !important;
 }
 
 .bg-black {
