--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -15,6 +15,10 @@ html {
     padding: 0;
 }
 
+.navbar-content a {
+    color: #fff;
+}
+
 .navbar-brand {
     margin-left: 1rem;
 }
@@ -88,7 +92,7 @@ main .card_header {
 
 .card-image {
     width: 100%;
-    height: 50%;
+    height: 70%;
 }
 
 .card-image img {
@@ -98,7 +102,6 @@ main .card_header {
 }
 
 .card-body-custom {
-    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
