--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -17,7 +17,7 @@ html {
 }
 
 .navbar-content a {
-    color: #fff;
+  color: #fff;
 }
 
 .navbar-brand {
@@ -49,6 +49,7 @@ html {
   flex-direction: column;
   border-bottom: 2px solid black;
 }
+
 .ads {
   background-color: #789fa9;
   height: 25%;
@@ -79,9 +80,11 @@ html {
 .ad-img:nth-child(1) {
   animation-delay: 0s;
 }
+
 .ad-img:nth-child(2) {
   animation-delay: 3s;
 }
+
 .ad-img:nth-child(3) {
   animation-delay: 6s;
 }
@@ -90,15 +93,19 @@ html {
   0% {
     opacity: 0;
   }
+
   10% {
     opacity: 1;
   }
+
   30% {
     opacity: 1;
   }
+
   40% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
@@ -156,6 +163,7 @@ html {
 .aboutus-card ul li {
   margin-bottom: 8px;
 }
+
 .card-subtitle {
   margin-top: 15px;
   font-size: 17px;
@@ -163,9 +171,6 @@ html {
   font-style: italic;
   text-align: center;
 }
-
-
-
 
 main .card_header {
   margin: 1% 8% 0 8%;
@@ -191,14 +196,13 @@ main .card_header {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
+.custom-card:hover {
+  transform: scale(1.1);
+}
+
 .card-image {
-<<<<<<< HEAD
   width: 100%;
-  height: 50%;
-=======
-    width: 100%;
-    height: 70%;
->>>>>>> 85c2f3e1481fb231a25cad5ccd9a63bce8fefdad
+  height: 70%;
 }
 
 .card-image img {
@@ -208,20 +212,13 @@ main .card_header {
 }
 
 .card-body-custom {
-<<<<<<< HEAD
   height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem;
   text-align: center;
-=======
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 1rem;
-    text-align: center;
->>>>>>> 85c2f3e1481fb231a25cad5ccd9a63bce8fefdad
+  display: flex;
 }
 
 .card-title {
@@ -235,16 +232,37 @@ main .card_header {
   color: #28a745;
   margin-bottom: 1rem;
 }
+.btn-outline-primary {
+  background-color: #fff !important;
+  border: 1px solid #20677c;
+  border-radius: 25px;
+  color: #20677c;
+  transition: 0.3s;
+}
 
-.btn-cool {
+.btn-outline-primary:hover {
+  transform: translateY(-2px);
+  background-color: #20677c !important;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+  color: #fff !important;
+  border: 1px solid #20677c;
+}
+
+.btn-bgcolor {
   border-radius: 25px;
   transition: 0.3s;
   font-weight: 500;
+  background-color: #20677c !important;
+  border: 1px solid #20677c;
+  color: #fff;
 }
 
-.btn-cool:hover {
+.btn-bgcolor:hover {
+  background-color: #fff !important;
   transform: translateY(-2px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+  border: 1px solid #20677c;
+  color: #20677c !important;
 }
 
 footer {
