--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -16,8 +16,15 @@ html {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
 }
 
-.navbar-content a {
+.navbar-content a,
+.navbar-content button {
     color: #fff;
+}
+
+.navbar-content a:hover,
+.navbar-content button:hover {
+    transform: scale(1.05);
+    transition: 0.3s;
 }
 
 .navbar-brand {
@@ -139,6 +146,7 @@ html {
 
 .aboutus-card:hover {
     transform: scale(1.2);
+    transition: 0.3s;
     box-shadow: 0 12px 28px rgba(0, 0, 0, 0.2);
 }
 
@@ -172,6 +180,62 @@ html {
     text-align: center;
 }
 
+.btn-our {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #20677c;
+    --bs-btn-border-color: #20677c;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #1a5c6a;
+    --bs-btn-hover-border-color: #175463;
+    --bs-btn-focus-shadow-rgb: 32, 103, 124;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #175463;
+    --bs-btn-active-border-color: #144c5a;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #20677c;
+    --bs-btn-disabled-border-color: #20677c;
+
+    color: var(--bs-btn-color);
+    background-color: var(--bs-btn-bg);
+    border: 1px solid var(--bs-btn-border-color);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.375rem;
+    transition: all 0.15s ease-in-out;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    text-decoration: none;
+}
+
+.btn-our:hover {
+    background-color: var(--bs-btn-hover-bg);
+    border-color: var(--bs-btn-hover-border-color);
+    color: var(--bs-btn-hover-color);
+}
+
+.btn-our:focus {
+    box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), 0.5);
+}
+
+.btn-our:active {
+    background-color: var(--bs-btn-active-bg);
+    border-color: var(--bs-btn-active-border-color);
+    box-shadow: var(--bs-btn-active-shadow);
+    color: var(--bs-btn-active-color);
+}
+
+.btn-our:disabled {
+    background-color: var(--bs-btn-disabled-bg);
+    border-color: var(--bs-btn-disabled-border-color);
+    color: var(--bs-btn-disabled-color);
+    opacity: 0.65;
+    pointer-events: none;
+}
 
 
 
