setup to work on different services

--- a/SuperAdmin/css/styles.css
+++ b/SuperAdmin/css/styles.css
@@ -8002,6 +8002,9 @@ fieldset:disabled .btn {
   z-index: 1030;
 }
 
+.navbar-brand img {
+  height: 130px;
+}
 .fixed-bottom {
   position: fixed;
   right: 0;
